--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jaeger/querylist": "^4.2",
         "jenssegers/mongodb": "^3.8",
         "jiannei/laravel-enum": "^1.3",
         "jiannei/laravel-logger": "^1.1",
